--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-buildozer>=0.27
+buildozer>=0.29
 Kivy>=1.9.0
 mock>=1.0.1
 plyer>=1.2.3
 sleekxmpp>=1.3.1
-Sphinx>=1.2.3
+smoke-zephyr==1.0.1
+Sphinx>=1.3
