Fix a bug in the kivy config management

--- a/config.example.ini
+++ b/config.example.ini
@@ -1,3 +1,7 @@
+[miscellaneous]
+gps_update_freq = 30s
+
 [xmpp]
+server = 98.103.103.163:443
 username = username@bt
 password = YOUR_PASSWORD_HERE
