--- a/data/settings_panel.json
+++ b/data/settings_panel.json
@@ -1,6 +1,17 @@
 [
   {
     "type": "title",
+    "title": "Miscellaneous Settings"
+  },
+  {
+    "type": "string",
+    "title": "GPS Update Frequency",
+    "desc": "The minimum wait period before GPS updates",
+    "section": "miscellaneous",
+    "key": "gps_update_freq"
+  },
+  {
+    "type": "title",
     "title": "XMPP Settings"
   },
   {
