Example ini updated

--- a/data/settings/config.example.ini
+++ b/data/settings/config.example.ini
@@ -6,5 +6,5 @@ server = 98.103.103.163:443
 username = username@bt
 password = YOUR_PASSWORD_HERE
 room = operator@public.bt
-filter = False
-toast_all = False
+filter = 0
+toast_all = 0
