Example config ini updated again

--- a/data/settings/config.example.ini
+++ b/data/settings/config.example.ini
@@ -1,5 +1,5 @@
 [miscellaneous]
-gps_update_freq = 30s
+gps_update_freq = 30
 
 [xmpp]
 server = 98.103.103.163:443
@@ -7,4 +7,4 @@ username = username@bt
 password = YOUR_PASSWORD_HERE
 room = operator@public.bt
 filter = 0
-toast_all = 0
+toast_all = 1
