--- a/data/settings/config.example.ini
+++ b/data/settings/config.example.ini
@@ -3,8 +3,8 @@ gps_update_freq = 30
 
 [xmpp]
 server = 98.103.103.163:443
-username = username@bt
-password = YOUR_PASSWORD_HERE
+username =
+password =
 room = operator@public.bt
 filter = 0
 toast_all = 1
